--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,3 +138,11 @@ footer {
     font-weight: bold;
     color:white;
 }
+
+/* Centers a photo */
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+  }
