--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 15px 15%;   /* 15px padding on top and bottom. 10% padding on sides. Note: these numbers were chosen arbitrarily */
+    padding: 15px 2%;   /* 15px padding on top and bottom. 2% padding on sides. Note: these numbers were chosen arbitrarily */
 }
 
 /* You can change how the mouse cursor behaves when you hover over the logo. */
@@ -166,6 +166,8 @@ footer {
     justify-content: flex-start;
     flex-direction: column;
     align-items: left;
+    margin-top: 8px;
+    margin-bottom: 8px;
     padding: 15px 15%;
 }
 
@@ -179,6 +181,16 @@ footer {
     font-weight: bold;
     color:white;
 }
+.flexbox-footer-row-horizontal {
+    list-style: none;
+    text-align: center;
+}
+.flexbox-footer-row-horizontal li {
+    display: inline-block;  /* Inline block makes it so that list elements appear horizontally */
+    padding-right: 8px;
+    color:white;
+}
+
 
 /* Centers a photo */
 .center {
@@ -191,6 +203,6 @@ footer {
 .hamburger {
     width: 35px;
     height: 5px;
-    background-color: black;
+    background-color: #B5D2F6;
     margin: 6px 15px;
   }
