--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     padding: 15px 2%;   /* 15px padding on top and bottom. 2% padding on sides. Note: these numbers were chosen arbitrarily */
+    /* background-color: #F7F7F7; */
 }
 
 /* You can change how the mouse cursor behaves when you hover over the logo. */
@@ -178,12 +179,19 @@ footer {
 .flexbox-footer-row {
     flex-wrap: wrap;    /* When viewport gets smaller each item will wrap onto a new line */
     list-style: none;
+    flex-direction: column;
     margin-bottom: 32px;
 }
 .flexbox-footer-row li {
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     font-weight: bold;
     color:white;
+}
+.flexbox-footer-logo {
+    cursor:pointer;
+    float:right;            /* Important! 'Float' allows the logo to be in the same line as the text. */
+    display: block;         /* Right align the logo */
+    margin-left: auto;      /* Right align the logo */
 }
 .flexbox-footer-row-horizontal {
     list-style: none;
