--- a/styles/styles.css
+++ b/styles/styles.css
@@ -182,7 +182,7 @@ footer {
     flex-direction: column;
     margin-bottom: 32px;
 }
-.flexbox-footer-row li {
+.flexbox-footer-row a {
     margin-bottom: 1px;
     font-weight: bold;
     color:white;
@@ -192,6 +192,11 @@ footer {
     float:right;            /* Important! 'Float' allows the logo to be in the same line as the text. */
     display: block;         /* Right align the logo */
     margin-left: auto;      /* Right align the logo */
+    margin-top: 5px;
+    transition: all 0.8s ease 0s;
+}
+.flexbox-footer-logo:hover {
+    transform: scale(1.05);
 }
 .flexbox-footer-row-horizontal {
     list-style: none;
@@ -202,7 +207,9 @@ footer {
     padding-right: 8px;
     color:white;
 }
-
+.flexbox-footer-row-horizontal a {
+    color:white;
+}
 
 /* Centers a photo */
 .center {
