hide navbar text on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,11 +68,12 @@ header {
 }
 
 /* This CSS makes it so that the hamburger only appears on mobile screens. */
-@media (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     .flexbox-navbar-hamburger {
       display: block;
     }
  }
+
 
 /* Hamburger animation */
 .flexbox-navbar-hamburger:hover {
@@ -107,6 +108,12 @@ header {
     display: inline-block;  /* Inline block makes it so that list elements appear horizontally */
     padding: 0px 20px;
 }
+
+@media (max-width: 500px) {
+    .flexbox-navbar-text  {
+      display: none;
+    }
+ }
 
 /* Target hyperlinks within the navbar */
 .flexbox-navbar-text li a{
