--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,7 +215,9 @@ footer {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    height: 300px;
+    width: 1100px;
+    object-fit: cover;
 }
 
 .hamburger {
