--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,17 +181,10 @@ header {
         margin-top: 40px; 
     }
 
-    .flexbox-navbar-button.active {
-        margin-left: 20px;
-        padding: 12px 32px;
-        background-color: #7D92DB;
-        color: white;
-        font-size: 20px;
-        font-weight: bold;
-        border: none;
-        border-radius: 50px;
-        cursor:pointer;
-        transition: all 0.5s ease 0s;
+    /* Make the button slightly smaller on small screens */
+    .flexbox-navbar-button {
+        /* font-size: 20px; */
+        padding: 12px 20px;
     }
  }
 
