--- a/views/layouts/main2.hbs
+++ b/views/layouts/main2.hbs
@@ -21,19 +21,17 @@
 
         <a href="about_diabetes" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px"
                 height="85px" alt="Diabetes@Home Logo"></a>
-
-        <img class="nav-profile-icon" src="assets/navbar_profile_icon.png">
-        
         <nav>
-            <ul class="flexbox-navbar-profile">
-                <li class="nav-username">
-                    <p>Username</p>
+            <ul class="flexbox-navbar-text">
+                <li class="nav-item">
+                    <a href="about_diabetes">About Diabetes</a>
                 </li>
-                <li class="nav-userstatus">
-                    <p>USER</p>
+                <li class="nav-item">
+                    <a href="about_site">About Us</a>
                 </li>
             </ul>
         </nav>
+        <a class="login-button" href="#"><button class="flexbox-navbar-button">Log in</button></a>
     </header>
 
     <!-- Hamburger sidebar overlay which contains links. Requires Javascript. -->
