--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,8 @@
         <a href="about_diabetes" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px"
                 height="85px" alt="Diabetes@Home Logo"></a>
 
+        <img class="nav-msg-icon" src="assets/navbar_message_icon.png">
+        <img class="nav-profile-verticle-bar" src="assets/navbar_line_verticle.png">
         <img class="nav-profile-icon" src="assets/navbar_profile_icon.png">
         
         <nav>
